[project]
name = "youqu-html-rpc"
description = ""
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "pexpect",
    "funnylog2",
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[project.optional-dependencies]
server = [
    "youqu-html",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu_html_rpc/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu_html_rpc",
]

